Adds enablePublicSharedBoards to config.json
Consistency with https://github.com/mattermost/focalboard/pull/3441

--- a/docker/config.json
+++ b/docker/config.json
@@ -13,5 +13,6 @@
     "session_refresh_time": 18000,
     "localOnly": false,
     "enableLocalMode": true,
+    "enablePublicSharedBoards": true,
     "localModeSocketLocation": "/var/tmp/focalboard_local.socket"
 }
