--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,6 +7,9 @@
 		"pack": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
 		"packdev": "cross-env NODE_ENV=dev webpack --config webpack.dev.js",
 		"watchdev": "cross-env NODE_ENV=dev webpack --watch --progress --config webpack.dev.js",
+		"esbuild-pack": "NODE_ENV=production node scripts/build.js",
+		"esbuild-packdev": "NODE_ENV=dev node scripts/build.js",
+		"esbuild-watchdev": "NODE_ENV=watch node scripts/build.js",
 		"test": "jest",
 		"updatesnapshot": "jest --updateSnapshot",
 		"check": "eslint --ext .tsx,.ts . --quiet --cache && stylelint **/*.scss",
@@ -119,6 +122,11 @@
 		"cypress": "^9.5.2",
 		"cypress-failed-log": "^2.9.5",
 		"cypress-real-events": "^1.7.0",
+		"ejs": "^3.1.8",
+		"esbuild": "^0.15.12",
+		"esbuild-loader": "^2.20.0",
+		"esbuild-plugin-copy": "^1.6.0",
+		"esbuild-sass-plugin": "^2.3.3",
 		"eslint": "^8.11.0",
 		"eslint-import-resolver-webpack": "0.13.2",
 		"eslint-plugin-babel": "^5.3.1",
@@ -136,6 +144,8 @@
 		"isomorphic-fetch": "^3.0.0",
 		"jest": "^27.5.1",
 		"jest-mock": "^27.5.1",
+		"postcss": "^8.4.18",
+		"postcss-url": "^10.1.3",
 		"prettier": "^2.6.1",
 		"redux-mock-store": "^1.5.4",
 		"sass": "^1.49.9",
