--- a/modd.conf
+++ b/modd.conf
@@ -4,5 +4,5 @@
 }
 
 {
-    daemon: cd webapp && npm run $([[ $ESBUILD ]] && echo esbuild-watchdev || echo watchdev)
+    daemon: cd webapp && npm run watchdev
 }
