--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -52,9 +52,7 @@
             "host": "127.0.0.1",
             "program": "${file}",
             "env": {},
-            "args": [
-                "-tags json1"
-            ],
+            "args": [],
             "showLog": true
         },
         {
