--- a/website/site/config.toml
+++ b/website/site/config.toml
@@ -108,7 +108,7 @@ pygmentsStyle = "manni"
   [[params.intro.item]]
     title = "Download"
     description = "Download Focalboard here."
-    url = "docs/personal-edition"
+    url = "/docs/personal-edition"
     button = "Download Now"
     icon = "/img/download-icon.svg"
     draft = false
