Remove SQLite and its references in the codebase, dependencies and testing

--- a/config.json
+++ b/config.json
@@ -1,24 +1,24 @@
 {
-	"serverRoot": "http://localhost:8000",
-	"port": 8000,
-	"dbtype": "sqlite3",
-	"dbconfig": "./focalboard.db?_busy_timeout=5000",
-	"dbtableprefix": "",
-	"postgres_dbconfig": "dbname=focalboard sslmode=disable",
-	"useSSL": false,
-	"webpath": "./webapp/pack",
-	"filesdriver": "local",
-	"filespath": "./files",
-	"telemetry": true,
-	"prometheusaddress": ":9092",
-	"webhook_update": [],
-	"session_expire_time": 2592000,
-	"session_refresh_time": 18000,
-	"localOnly": false,
-	"enableLocalMode": true,
-	"localModeSocketLocation": "/var/tmp/focalboard_local.socket",
-	"authMode": "native",
-	"logging_cfg_file": "",
-	"audit_cfg_file": "",
-	"enablePublicSharedBoards": false
+    "serverRoot": "http://localhost:8000",
+    "port": 8000,
+    "dbtype": "postgres",
+    "dbconfig": "postgres://mmuser:mostest@localhost/mattermost_test?sslmode=disable\u0026connect_timeout=10\u0026binary_parameters=yes",
+    "dbtableprefix": "",
+    "postgres_dbconfig": "dbname=focalboard sslmode=disable",
+    "useSSL": false,
+    "webpath": "./webapp/pack",
+    "filesdriver": "local",
+    "filespath": "./files",
+    "telemetry": true,
+    "prometheusaddress": ":9092",
+    "webhook_update": [],
+    "session_expire_time": 2592000,
+    "session_refresh_time": 18000,
+    "localOnly": false,
+    "enableLocalMode": true,
+    "localModeSocketLocation": "/var/tmp/focalboard_local.socket",
+    "authMode": "native",
+    "logging_cfg_file": "",
+    "audit_cfg_file": "",
+    "enablePublicSharedBoards": false
 }
