--- a/app-config.json
+++ b/app-config.json
@@ -1,11 +1,11 @@
 {
-	"serverRoot": "http://localhost:8088",
-	"port": 8088,
-	"dbtype": "sqlite3",
-	"dbconfig": "./focalboard.db",
-	"useSSL": false,
-	"webpath": "./pack",
-	"filespath": "./files",
-	"telemetry": true,
-	"localOnly": true
+    "serverRoot": "http://localhost:8088",
+    "port": 8088,
+    "dbtype": "postgres",
+    "dbconfig": "postgres://mmuser:mostest@localhost/mattermost_test?sslmode=disable\u0026connect_timeout=10\u0026binary_parameters=yes",
+    "useSSL": false,
+    "webpath": "./pack",
+    "filespath": "./files",
+    "telemetry": true,
+    "localOnly": true
 }
