--- a/docker/server_config.json
+++ b/docker/server_config.json
@@ -1,16 +1,16 @@
 {
-  "serverRoot": "http://localhost:8000",
-  "port": 8000,
-  "dbtype": "sqlite3",
-  "dbconfig": "./data/focalboard.db",
-  "postgres_dbconfig": "dbname=focalboard sslmode=disable",
-  "useSSL": false,
-  "webpath": "./pack",
-  "filespath": "./data/files",
-  "telemetry": true,
-  "session_expire_time": 2592000,
-  "session_refresh_time": 18000,
-  "localOnly": false,
-  "enableLocalMode": true,
-  "localModeSocketLocation": "/var/tmp/focalboard_local.socket"
+    "serverRoot": "http://localhost:8000",
+    "port": 8000,
+    "dbtype": "postgres",
+    "dbconfig": "postgres://mmuser:mostest@localhost/mattermost_test?sslmode=disable\u0026connect_timeout=10\u0026binary_parameters=yes",
+    "postgres_dbconfig": "dbname=focalboard sslmode=disable",
+    "useSSL": false,
+    "webpath": "./pack",
+    "filespath": "./data/files",
+    "telemetry": true,
+    "session_expire_time": 2592000,
+    "session_refresh_time": 18000,
+    "localOnly": false,
+    "enableLocalMode": true,
+    "localModeSocketLocation": "/var/tmp/focalboard_local.socket"
 }
