--- a/server-config.json
+++ b/server-config.json
@@ -1,8 +1,8 @@
 {
     "serverRoot": "http://localhost:8000",
     "port": 8000,
-    "dbtype": "sqlite3",
-    "dbconfig": "./focalboard.db",
+    "dbtype": "postgres",
+    "dbconfig": "postgres://mmuser:mostest@localhost/mattermost_test?sslmode=disable\u0026connect_timeout=10\u0026binary_parameters=yes",
     "postgres_dbconfig": "dbname=focalboard sslmode=disable",
     "useSSL": false,
     "webpath": "./pack",
