--- a/webapp/cypress/config.json
+++ b/webapp/cypress/config.json
@@ -1,8 +1,8 @@
 {
     "serverRoot": "http://localhost:8088",
     "port": 8088,
-    "dbtype": "sqlite3",
-    "dbconfig": "file::memory:?cache=shared&_busy_timeout=5000",
+    "dbtype": "postgres",
+    "dbconfig": "postgres://mmuser:mostest@localhost/mattermost_test?sslmode=disable\u0026connect_timeout=10\u0026binary_parameters=yes",
     "useSSL": false,
     "webpath": "../pack",
     "filespath": "../../files",
