--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,10 +4,6 @@
 	"private": true,
 	"description": "",
 	"scripts": {
-		"pack": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
-		"packdev": "cross-env NODE_ENV=dev webpack --config webpack.dev.js",
-		"watchdev": "cross-env NODE_ENV=dev webpack --watch --progress --config webpack.dev.js",
-		"deveditor": "cross-env NODE_ENV=dev webpack server --config webpack.editor.js",
 		"test": "jest",
 		"updatesnapshot": "jest --updateSnapshot",
 		"check": "eslint --ext .tsx,.ts . --quiet --cache && stylelint **/*.scss",
@@ -40,12 +36,6 @@
 		"emoji-mart": "^3.0.1",
 		"fstream": "^1.0.12",
 		"fullcalendar": "^5.10.2",
-		"imagemin-gifsicle": "^7.0.0",
-		"imagemin-mozjpeg": "^10.0.0",
-		"imagemin-optipng": "^8.0.0",
-		"imagemin-pngquant": "^9.0.2",
-		"imagemin-svgo": "^10.0.1",
-		"imagemin-webp": "^7.0.0",
 		"lodash": "^4.17.21",
 		"marked": "^4.0.12",
 		"mini-create-react-context": "^0.4.1",
@@ -116,9 +106,7 @@
 		"@types/redux-mock-store": "^1.0.3",
 		"@typescript-eslint/eslint-plugin": "^5.16.0",
 		"@typescript-eslint/parser": "^5.16.0",
-		"copy-webpack-plugin": "^10.2.4",
 		"cross-env": "^7.0.3",
-		"css-loader": "^6.7.1",
 		"cypress": "^9.5.2",
 		"cypress-failed-log": "^2.9.5",
 		"cypress-real-events": "^1.7.0",
@@ -133,28 +121,16 @@
 		"eslint-plugin-no-only-tests": "2.6.0",
 		"eslint-plugin-react": "7.29.4",
 		"fetch-mock-jest": "^1.5.1",
-		"file-loader": "^6.2.0",
-		"html-webpack-plugin": "^5.5.0",
-		"image-webpack-loader": "^8.1.0",
 		"isomorphic-fetch": "^3.0.0",
 		"jest": "^27.5.1",
 		"jest-mock": "^27.5.1",
 		"prettier": "^2.6.1",
 		"redux-mock-store": "^1.5.4",
-		"sass": "^1.49.9",
-		"sass-loader": "^12.6.0",
 		"start-server-and-test": "^1.14.0",
-		"style-loader": "^3.3.1",
 		"stylelint": "^14.6.1",
 		"stylelint-config-sass-guidelines": "^9.0.1",
-		"terser-webpack-plugin": "^5.3.1",
 		"ts-jest": "^27.1.4",
-		"ts-loader": "^9.2.8",
-		"typescript": "^4.6.3",
-		"webpack": "^5.70.0",
-		"webpack-cli": "^4.9.2",
-		"webpack-dev-server": "^4.11.1",
-		"webpack-merge": "^5.8.0"
+		"typescript": "^4.6.3"
 	},
 	"optionalDependencies": {
 		"cypress": "^9.5.2"
