--- a/webapp/package.json
+++ b/webapp/package.json
@@ -65,6 +65,8 @@
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-select": "^5.2.2",
+		"react-virtualized-auto-sizer": "^1.0.7",
+		"react-window": "^1.8.8",
 		"trim-newlines": "^4.0.2"
 	},
 	"jest": {
@@ -113,6 +115,8 @@
 		"@types/react-redux": "^7.1.23",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/react-select": "^5.0.0",
+		"@types/react-virtualized-auto-sizer": "^1.0.1",
+		"@types/react-window": "^1.8.5",
 		"@types/redux-mock-store": "^1.0.3",
 		"@typescript-eslint/eslint-plugin": "^5.16.0",
 		"@typescript-eslint/parser": "^5.16.0",
