--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -1,8 +1,14 @@
 {
     "compilerOptions": {
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "esnext"
+        ],
         "jsx": "react",
-        "target": "esnext",
-        "module": "es2020",
+        "target": "ESNext",
+        "module": "ES2022",
+        "moduleResolution": "node",
         "esModuleInterop": true,
         "noImplicitAny": true,
         "skipLibCheck": true,
@@ -14,16 +20,23 @@
         "resolveJsonModule": true,
         "incremental": false,
         "baseUrl": ".",
-        "outDir": "./dist",
-        "moduleResolution": "node",
+        "outDir": "dist",
+        "noEmit": true,
         "typeRoots": [ "./src/types", "./node_modules/@types"],
+        "paths": {
+            "@mattermost/types/*": ["../platform/packages/types/src/*"],
+            "@mattermost/client": ["../platform/client/src"],
+            "@mattermost/components": ["../platform/components/src"],
+            //"mattermost-redux/*": ["../channels/src/packages/mattermost-redux/src/*"],
+            //"reselect": ["../channels/src/packages/reselect/src"]
+        }
     },
     "include": [
-        "./src/**/*",
+      "**/*"
     ],
     "exclude": [
         ".git",
-        "!node_modules/@types",
+        "node_modules",
         "dist",
     ]
 }
