--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -14,7 +14,7 @@ env:
 jobs:
 
   ubuntu:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
  
     steps:
     - uses: actions/checkout@v3
@@ -218,7 +218,7 @@ jobs:
         path: ${{ github.workspace }}/focalboard/win-wpf/dist/focalboard-win.zip
 
   plugin:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
